Added secure https instead of http or something like that

--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
         <!-- Shows Gifs with ratings here -->
         <div id="gifs"></div>
         <!-- Script links for jQuery -->
-        <script src="http://code.jquery.com/jquery-2.1.3.min.js"></script>
+        <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
         <script type="text/javascript">
         // Initial array of Shows
-        var shows = ["Archer", "Game of Thrones", "Bob's Burgers", "Bojack Horseman", "Rick and Morty", "NBA", "Hey Arnold", "Breaking Bad", "Boardwalk Empire", "The Sopranos", "Silicon Valley", "Shark Tank", "Highly Questionable"];
+        var shows = ["Archer", "Game of Thrones", "Bob's Burgers", "Bojack Horseman", "Rick and Morty", "NBA", "Hey Arnold", "Breaking Bad", "Boardwalk Empire", "The Sopranos", "Silicon Valley", "Shark Tank", "Highly Questionable", "The 100"];
 
 
 
