--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         function displayShowGifs() {
 
             var show = $(this).attr("data-name");
-            var queryURL = "http://api.giphy.com/v1/gifs/search?q=" + show + "&limit=10&&api_key=dc6zaTOxFJmzC"
+            var queryURL = "https://api.giphy.com/v1/gifs/search?q=" + show + "&limit=10&&api_key=dc6zaTOxFJmzC"
 
 
             // Create AJAX call for specifiec show being called
